--- a/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
+++ b/treebolicOwlServices/src/main/res/values-fr/strings_settings.xml
@@ -8,7 +8,7 @@
 
 	<!-- General settings -->
 	<string name="pref_header_general" tools:keep="@string/pref_header_general">Général</string>
-	<string name="pref_header_services" tools:keep="@string/pref_header_services">Services</string>
+	<string name="pref_header_service" tools:keep="@string/pref_header_service">Service</string>
 	<string name="pref_header_download" tools:keep="@string/pref_header_download">Téléchargement</string>
 
 	<!-- source -->
@@ -28,7 +28,7 @@
 
 	<!-- service -->
 	<string name="pref_title_service">Service</string>
-	<string name="pref_description_services">Type du Service OWL</string>
+	<string name="pref_description_service">Type du Service OWL</string>
 
 	<string-array name="pref_services_list_titles">
 		<item>Broadcast service</item>
